--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,7 @@
         "custom_string_obkoro1": "", 
         // 版权声明 保留文件所有权利 自动替换年份 获取git配置的用户名和邮箱
         // 版权声明获取git配置, 与Author字段一致: ${git_name} ${git_email}
-        "custom_string_obkoro1_copyright": "Copyright (c) ${now_year} by ${git_name}, All Rights Reserved. "
+        "custom_string_obkoro1_copyright": "Copyright (c) ${now_year} by kamalyes, All Rights Reserved. "
         // "custom_string_obkoro1_copyright": "Copyright (c) ${now_year} by 写死的公司名/用户名, All Rights Reserved. "
     },
     // 函数注释
@@ -122,17 +122,20 @@
         },
     },
     "cSpell.words": [
-      "amap",
+      "ADMI",
       "casbin",
+      "CSBEF",
       "Datetime",
-      "disid",
       "Dont",
       "fsnotify",
       "goconfig",
+      "gonic",
+      "Gorm",
       "kamalyes",
       "mapstructure",
       "Mqtt",
       "postgre",
+      "varchar",
       "Wechat"
     ]
 }
