:fire: feat: 增加numberx、stringx、bytex & github workflows

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -124,6 +124,7 @@
     "cSpell.words": [
       "ADMI",
       "amap",
+      "bytex",
       "casbin",
       "CSBEF",
       "Datetime",
@@ -139,10 +140,13 @@
       "Mqtt",
       "nolintlint",
       "nonamedreturns",
+      "numberx",
       "perfsprint",
       "postgre",
       "predeclared",
       "promlinter",
+      "stringx",
+      "strs",
       "Strtotime",
       "testifylint",
       "testpackage",
