:fire: feat: 增加stringx模块相关测试用例

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -122,6 +122,7 @@
         },
     },
     "cSpell.words": [
+      "abcdefghij",
       "ADMI",
       "amap",
       "bytedance",
@@ -147,6 +148,7 @@
       "postgre",
       "predeclared",
       "promlinter",
+      "stretchr",
       "stringx",
       "strs",
       "Strtotime",
