:fire: feat: 增强rand函数提升性能

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -131,6 +131,8 @@
       "CSBEF",
       "Datetime",
       "Dont",
+      "fastrand",
+      "fastrandn",
       "fsnotify",
       "goconfig",
       "gonic",
@@ -138,6 +140,7 @@
       "govet",
       "jsoniter",
       "kamalyes",
+      "linkname",
       "loggercheck",
       "mapstructure",
       "Mqtt",
@@ -148,6 +151,8 @@
       "postgre",
       "predeclared",
       "promlinter",
+      "Randu",
+      "randx",
       "stretchr",
       "stringx",
       "strs",
