:fire: feat: 增加gzip zlib压缩与解压缩

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
-{
+{   "gopls": {
+        "usePlaceholders": true, // 完成函数时添加参数占位符
+        "completeUnimported": true, // 自动完成未导入的包
+        "watchFileChanges": true,  // 在编辑器外监视文件更改
+        "deepCompletion": true,    // 启用深度完成
+    },
     "fileheader.customMade": {
         // Author字段是文件的创建者 可以在specialOptions中更改特殊属性
         // 公司项目和个人项目可以配置不同的用户名与邮箱 搜索: gitconfig includeIf  比如: https://ayase.moe/2021/03/09/customized-git-config/
