--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -133,9 +133,11 @@
       "bytedance",
       "bytex",
       "casbin",
+      "contextx",
       "CSBEF",
       "Datetime",
       "Dont",
+      "exnet",
       "fastrand",
       "fastrandn",
       "fsnotify",
@@ -162,10 +164,12 @@
       "stringx",
       "strs",
       "Strtotime",
+      "syncx",
       "testifylint",
       "testpackage",
       "testx",
       "varchar",
-      "Wechat"
+      "Wechat",
+      "zipx"
     ]
 }
