:fire: feat：增加常用queue以及ras加密

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -134,9 +134,12 @@
       "bytex",
       "casbin",
       "contextx",
+      "Cryptor",
       "CSBEF",
       "Datetime",
       "Dont",
+      "Encrypter",
+      "errorx",
       "exnet",
       "fastrand",
       "fastrandn",
@@ -145,6 +148,7 @@
       "gonic",
       "Gorm",
       "govet",
+      "Hasher",
       "hashers",
       "jsoniter",
       "kamalyes",
@@ -157,6 +161,7 @@
       "nonamedreturns",
       "numberx",
       "perfsprint",
+      "PKCS",
       "postgre",
       "predeclared",
       "Proba",
