:fire: feat: debug sign

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -134,9 +134,11 @@
       "bytex",
       "casbin",
       "contextx",
+      "Cryptor",
       "CSBEF",
       "Datetime",
       "Dont",
+      "Encrypter",
       "exnet",
       "fastrand",
       "fastrandn",
@@ -145,6 +147,7 @@
       "gonic",
       "Gorm",
       "govet",
+      "Hasher",
       "hashers",
       "jsoniter",
       "kamalyes",
@@ -157,6 +160,7 @@
       "nonamedreturns",
       "numberx",
       "perfsprint",
+      "PKCS",
       "postgre",
       "predeclared",
       "Proba",
