:fire: feat：整理部分类型为外部公共使用&增加osx stringx等模块的测试用例

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -147,7 +147,9 @@
       "goconfig",
       "gonic",
       "Gorm",
+      "gotoolbox",
       "govet",
+      "hashable",
       "Hasher",
       "hashers",
       "jsoniter",
@@ -160,6 +162,7 @@
       "nolintlint",
       "nonamedreturns",
       "numberx",
+      "nums",
       "perfsprint",
       "PKCS",
       "postgre",
