--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -134,6 +134,7 @@
       "bytex",
       "casbin",
       "contextx",
+      "cooldown",
       "Cryptor",
       "CSBEF",
       "Datetime",
@@ -152,6 +153,7 @@
       "hashable",
       "Hasher",
       "hashers",
+      "httpx",
       "jsoniter",
       "kamalyes",
       "linkname",
@@ -159,6 +161,7 @@
       "mapstructure",
       "mathx",
       "Mqtt",
+      "nesday",
       "nolintlint",
       "nonamedreturns",
       "numberx",
@@ -171,6 +174,9 @@
       "promlinter",
       "Randu",
       "randx",
+      "rsday",
+      "sday",
+      "sqlbuilderx",
       "stretchr",
       "stringx",
       "strs",
@@ -179,6 +185,7 @@
       "testifylint",
       "testpackage",
       "testx",
+      "urday",
       "varchar",
       "Wechat",
       "zipx"
