:fire: feat：增加生成UserAgent逻辑（暂时满足使用、后续在扩展）

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -130,7 +130,10 @@
       "abcdefghij",
       "ADMI",
       "amap",
+      "Applebot",
+      "Bingbot",
       "bytedance",
+      "Bytespider",
       "bytex",
       "casbin",
       "contextx",
@@ -140,14 +143,17 @@
       "CSBEF",
       "Datetime",
       "Dont",
+      "Edgi",
       "Encrypter",
       "errorx",
       "exnet",
       "fastrand",
       "fastrandn",
+      "FBAN",
       "fsnotify",
       "goconfig",
       "gonic",
+      "Googlebot",
       "Gorm",
       "gotoolbox",
       "govet",
@@ -162,7 +168,9 @@
       "LTRB",
       "mapstructure",
       "mathx",
+      "Miui",
       "Mqtt",
+      "Msie",
       "nesday",
       "nolintlint",
       "nonamedreturns",
@@ -187,6 +195,8 @@
       "testifylint",
       "testpackage",
       "testx",
+      "Tiktok",
+      "Twitterbot",
       "urday",
       "varchar",
       "webp",
