--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -212,6 +212,7 @@
       "testpackage",
       "testx",
       "Tiktok",
+      "timestamppb",
       "Twitterbot",
       "urday",
       "varchar",
