:fire: feat：增强convert、mathx模块并迁移测试类到对应模块下

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -144,6 +144,7 @@
       "amap",
       "Applebot",
       "Bingbot",
+      "Builderland",
       "bytedance",
       "Bytespider",
       "bytex",
